ENH: ignore cython generated spa_py.c file
* git rm spa_py.c to remove it from repo
* add cython to option extra requires
* use full paths in spa_c_files for sources
* add line to bug fixes addressing #168

--- a/docs/sphinx/source/whatsnew/v0.6.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.0.rst
@@ -156,6 +156,7 @@ Bug fixes
 * Fixed bug in tracking.singleaxis that mistakenly assigned nan values when
   the Sun was still above the horizon. No effect on systems with axis_tilt=0.
   (:issue:`569`)
+* Patch SPA C-files to fix timezone macro name clash with `pyconfig.h`. (:issue:`168`)
 
 
 Documentation
