--- a/docs/sphinx/source/whatsnew/v0.6.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.1.rst
@@ -9,7 +9,7 @@ release.
 **Python 2.7 support will end on June 1, 2019**. Releases made after this
 date will require Python 3. (:issue:`501`)
 
-**Minimum pandas requirment bumped 0.14.0=>0.15.0**
+**Minimum pandas requirement bumped 0.14.0=>0.15.0**
 
 
 API Changes
