--- a/docs/sphinx/source/whatsnew/v0.6.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.1.rst
@@ -28,10 +28,11 @@ API Changes
 
 Enhancements
 ~~~~~~~~~~~~
-* :func:`~pvlib.solarposition.sun_rise_set_transit_ephem` returns sunrise, sunset
+* Add :py:func:`~pvlib.solarposition.sun_rise_set_transit_ephem`to calculate sunrise, sunset
   and transit times using pyephem (:issue:`114`)
 * Add geometric functions for sunrise, sunset, and sun transit times,
   :func:`~pvlib.solarposition.sun_rise_set_transit_geometric` (:issue:`114`)
+* Add `Location` class method :py:func:`~pvlib.location.Location.get_sun_rise_set_transit`
 * Created :py:func:`pvlib.iotools.read_srml` and
   :py:func:`pvlib.iotools.read_srml_month_from_solardat` to read University of
   Oregon Solar Radiation Monitoring Laboratory data. (:issue:`589`)
