--- a/docs/sphinx/source/whatsnew/v0.6.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.1.rst
@@ -19,11 +19,14 @@ API Changes
   they will be removed in v0.7. Use the new :py:func:`pvlib.iotools.read_tmy2`
   and :py:func:`pvlib.iotools.read_tmy3` instead. (:issue:`261`)
 * Added keyword argument ``horizon`` to :func:`~pvlib.solarposition.pyephem`
-  and :func:`~pvlib.solarposition.calc_time` with default value ``'+0:00'``
-* Changed key names for `components` returned from :py:func:`pvlib.clearsky.detect_clearsky`
-* Changed function name from :py:func:`pvlib.solarposition.get_rise_set_transit` (deprecated)
-  to :py:func:`pvlib.solarposition.sun_rise_set_transit_spa. `sun_rise_set_transit_spa`
-  requires time input to be localized to the specified latitude/longitude. (:issue:`316')
+  and :func:`~pvlib.solarposition.calc_time` with default value ``'+0:00'``.
+  (:issue:`588`)
+* Changed key names for `components` returned from
+  :py:func:`pvlib.clearsky.detect_clearsky`. (:issue:`596`)
+* Changed function name from `pvlib.solarposition.get_rise_set_transit`
+  (deprecated) to :py:func:`pvlib.solarposition.sun_rise_set_transit_spa.
+  `sun_rise_set_transit_spa` requires time input to be localized to the
+  specified latitude/longitude. (:issue:`316`)
 
 
 Enhancements
@@ -40,14 +43,15 @@ Enhancements
 * Created :py:func:`pvlib.iotools.read_midc` and :py:func:`pvlib.iotools.read_midc_raw_data_from_nrel`
   to read NREL MIDC data. (:issue:`601`)
 * Change :py:func:`pvlib.pvsystem.sapm_spectral_loss` to avoid numpy warning.
-* Add warning message when :py:func:`pvlib.spa` is reloaded.
+* Add warning message when :py:func:`pvlib.spa` is reloaded. (:issue:`401`)
 
 
 Bug fixes
 ~~~~~~~~~
 * Fix when building documentation using Matplotlib 3.0 or greater.
-* `~pvlib.spa.calculate_deltat`: Fix constant coefficient of the polynomial expression for years >= 1860
-  and < 1900, fix year 2050 which was returning 0.
+* `~pvlib.spa.calculate_deltat`: Fix constant coefficient of the polynomial
+  expression for years >= 1860 and < 1900, fix year 2050 which was
+  returning 0. (:issue:`600`)
 * Fix and improve :func:`~pvlib.solarposition.hour_angle` (:issue:`598`)
 * Fix error in :func:`pvlib.clearsky.detect_clearsky` (:issue:`506`)
 
