--- a/docs/sphinx/source/whatsnew/v0.6.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.1.rst
@@ -23,10 +23,12 @@ API Changes
   (:issue:`588`)
 * Add `max_airmass` keyword argument to :py:func:`pvlib.irradiance.disc`.
   Default value (`max_airmass=12`) is consistent with polynomial fit in
-  original paper describing the model. Output of
-  :py:func:`pvlib.irradiance.dirint` and `:py:func:`pvlib.irradiance.dirindex`,
-  are different when `min_cos_zenith` and `max_zenith` kwargs are used.
-  (:issue:`450`)
+  original paper describing the model. This change may result in different
+  output of functions that use the `disc` *Kn* calculation for times when
+  input zenith angles approach 90 degrees. This includes
+  :py:func:`pvlib.irradiance.dirint` and :py:func:`pvlib.irradiance.dirindex`
+  when `min_cos_zenith` and `max_zenith` kwargs are used, as well as
+  :py:func:`pvlib.irradiance.gti_dirint`. (:issue:`450`)
 * Changed key names for `components` returned from
   :py:func:`pvlib.clearsky.detect_clearsky`. (:issue:`596`)
 * Changed function name from `pvlib.solarposition.get_rise_set_transit`
