Add irradiance.clearsky_index (#571)
* basic code for irradiance.clearsky_index, still needs full docstring and tests

* Add a float conversion to irradiance.clearsky_index to allow integer inputs

* added tests for irradiance.clearsky_index

* fix typo in irradiance.clearsky_index test

* fix typo in irradiance.clearsky_index test

* Update pvlib/test/test_irradiance.py to remove extra spaces

* fixed incorrect documentation for irradiance.clearsky_index

* rename poorly-named variables in irradiance.clearsky_index

* truncate nan/inf values to zero in irradiance.clearsky_index

* update whatsnew and api.rst

* improved formatting to satisfy stickler

* preserve input nans for irradiance.clearsky_index

* remove trailing whitespace

* refactor irradiance.clearsky_index to simplify type-handling logic.  also changed behavior for input inf values to set clearsky index to zero

* revert change to inf/nan handling; input infs yield clearsky_index=nan

--- a/docs/sphinx/source/whatsnew/v0.6.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.1.rst
@@ -63,6 +63,8 @@ Enhancements
 * Created :py:func:`pvlib.pvsystem.pvsyst_celltemp` to implement PVsyst's cell temperature model. (:issue:`552`)
 * Created :py:func:`pvlib.bifacial.pvfactors_timeseries` to use open-source `pvfactors` package to calculate back surface irradiance (:issue:`421`)
 * Add `PVSystem` class method :py:func:`~pvlib.pvsystem.PVSystem.pvsyst_celltemp` (:issue:`633`)
+* Add :py:func:`pvlib.irradiance.clearsky_index` to calculate clear-sky index
+  from measured GHI and modeled clear-sky GHI. (:issue:`551`)
 
 
 Bug fixes
@@ -102,3 +104,4 @@ Contributors
 * Jonathan Gaffiot (:ghuser:`jgaffiot`)
 * Marc Anoma (:ghuser:`anomam`)
 * Anton Driesse (:ghuser:`adriesse`)
+* Kevin Anderson (:ghuser:`kevinsa5`)
