--- a/docs/sphinx/source/whatsnew/v0.6.1.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.1.rst
@@ -1,6 +1,6 @@
 .. _whatsnew_0601:
 
-v0.6.1 (EST December, 2018)
+v0.6.1 (31 January 2019)
 ---------------------------
 
 This is a minor release. We recommend all users of v0.6.0 upgrade to this
