not working solrad

--- a/docs/sphinx/source/whatsnew/v0.6.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.2.rst
@@ -19,6 +19,7 @@ API Changes
 Enhancements
 ~~~~~~~~~~~~
 * Add US CRN data reader to `pvlib.iotools`.
+* Add SOLRAD data reader to `pvlib.iotools`.
 
 Bug fixes
 ~~~~~~~~~
