Minor change to default input for filename and update of What's New

--- a/docs/sphinx/source/whatsnew/v0.6.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.2.rst
@@ -20,6 +20,7 @@ Enhancements
 ~~~~~~~~~~~~
 * Add US CRN data reader to `pvlib.iotools`.
 * Add SOLRAD data reader to `pvlib.iotools`.
+* Add EPW data reader to `pvlib.iotools`. (:issue:`591`)
 
 Bug fixes
 ~~~~~~~~~
@@ -32,5 +33,6 @@ Testing
 
 Contributors
 ~~~~~~~~~~~~
-* cwhanse
-* wholmgren
+* Cliff Hansen (:ghuser:`cwhanse`)
+* Will Holmgren (:ghuser:`wholmgren`)
+* Roel Loonen (:ghuser:`roelloonen`)
