better nan handling in singleaxis

--- a/docs/sphinx/source/whatsnew/v0.6.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.2.rst
@@ -40,7 +40,11 @@ Bug fixes
 * Fixed :py:func:`~pvlib.irradiance.erbs` behavior when zenith is
   near 90 degrees. (:issue:`681`)
 * :py:func:`~pvlib.irradiance.dni` now referenced in API under
-  Decomposing and Combining irradiance header. (:issue:`686`)  
+  Decomposing and Combining irradiance header. (:issue:`686`)
+* Fixed NaN output from :py:func:`~pvlib.tracking.singleaxis` when sun
+  near horizon. (:issue:`656`)
+* Fixed numpy warnings in :py:func:`~pvlib.tracking.singleaxis` when
+  comparing NaN values to limits. (:issue:`622`)
 
 
 Testing
@@ -53,4 +57,5 @@ Contributors
 * Will Holmgren (:ghuser:`wholmgren`)
 * Roel Loonen (:ghuser:`roelloonen`)
 * Todd Hendricks (:ghuser:`tahentx`)
-
+* Kevin Anderson (:ghuser:`kevinsa5`)
+* :ghuser:`bentomlinson`
