--- a/docs/sphinx/source/whatsnew/v0.6.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.2.rst
@@ -47,10 +47,15 @@ Bug fixes
   near horizon. (:issue:`656`)
 * Fixed numpy warnings in :py:func:`~pvlib.tracking.singleaxis` when
   comparing NaN values to limits. (:issue:`622`)
+* Silenced divide by 0 irradiance warnings in
+  :py:func:`~pvlib.irradiance.klucher` and
+  :py:func:`~pvlib.pvsystem.calcparams_desoto`. (:issue:`698`)
+* Fix :py:class:`~pvlib.forecast.NDFD` model by updating variables.
 
 
 Testing
 ~~~~~~~
+* Remove most expected warnings emitted by test suite. (:issue:`698`)
 
 
 Contributors
