--- a/docs/sphinx/source/whatsnew/v0.6.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.2.rst
@@ -46,6 +46,8 @@ Bug fixes
   near horizon. (:issue:`656`)
 * Fixed numpy warnings in :py:func:`~pvlib.tracking.singleaxis` when
   comparing NaN values to limits. (:issue:`622`)
+* Fixed a bug in the day angle equation for the ASCE
+  extraterrestrial irradiance model. (:issue:`211`)
 
 
 Testing
