--- a/docs/sphinx/source/whatsnew/v0.6.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.2.rst
@@ -1,13 +1,14 @@
 .. _whatsnew_0620:
 
-v0.6.2 (exp. 31 March 2019)
----------------------------
+v0.6.2 (May 15, 2019)
+---------------------
 
 This is a minor release. We recommend all users of v0.6.1 upgrade to this
 release.
 
 **Python 2.7 support will end on June 1, 2019**. Releases made after this
-date will require Python 3. (:issue:`501`)
+date will require Python 3. This release is likely to be the last that
+supports Python 2.7. (:issue:`501`)
 
 **Minimum pandas requirement bumped 0.15.0=>0.16.0**
 
@@ -17,10 +18,10 @@ API Changes
 * :py:func:`~pvlib.irradiance.erbs` *doy* argument changed to
   *datetime_or_doy* to be consistent with allowed types and similar
   functions (:py:func:`~pvlib.irradiance.disc`,
-  :py:func:`~pvlib.irradiance.get_extra_radiation`).
+  :py:func:`~pvlib.irradiance.get_extra_radiation`). (:issue:`681`)
 * :py:func:`~pvlib.irradiance.erbs` DataFrame vs. OrderedDict return
   behavior now determined by type of *datetime_or_doy* instead of
-  *ghi* or *zenith*.
+  *ghi* or *zenith*. (:issue:`681`)
 * Added *min_cos_zenith* and *max_zenith* keyword arguments to
   :py:func:`~pvlib.irradiance.erbs`. (:issue:`681`)
 * Deprecated :py:meth:`~pvlib.modelchain.ModelChain.prepare_inputs`
@@ -28,14 +29,14 @@ API Changes
   (:issue:`705`, :issue:`707`)
 * Remove automatic column name mapping from :py:func:`~pvlib.iotools.read_midc`
   and :py:func:`~pvlib.iotools.read_midc_raw_data_from_nrel` and added
-  optional keyword argument `variable_map` to map columns.
+  optional keyword argument `variable_map` to map columns. (:issue:`721`)
 * Update :py:func:`~pvlib.bifacial.pvfactors_timeseries` and tests to use
   ``pvfactors`` v1.0.1 (:issue:`699`)
 
 Enhancements
 ~~~~~~~~~~~~
-* Add US CRN data reader to :ref:`iotools`.
-* Add SOLRAD data reader to :ref:`iotools`.
+* Add US CRN data reader to :ref:`iotools`. (:issue:`666`)
+* Add SOLRAD data reader to :ref:`iotools`. (:issue:`667`)
 * Add EPW data reader to :ref:`iotools`. (:issue:`591`)
 * Add PSM3 reader to :ref:`iotools`. (:issue:`592`)
 * Improve ModelChain inference method error text. (:issue:`621`)
@@ -82,5 +83,5 @@ Contributors
 * :ghuser:`bentomlinson`
 * :ghuser:`yxh289`
 * Jonathan Gaffiot (:ghuser:`jgaffiot`)
-* Leland Boeman (:ghuser: `lboeman`)
-* Marc Anoma (:ghuser: `anomam`)
+* Leland Boeman (:ghuser:`lboeman`)
+* Marc Anoma (:ghuser:`anomam`)
