--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -17,7 +17,7 @@ Enhancements
 * Add `ivtools` module to contain functions for IV model fitting.
 * Add :py:func:`~pvlib.ivtools.fit_sde_sandia`, a simple method to fit the
   single diode equation to an IV curve.
-* Add :py:func:`~pvlib.ivtools.fit_cec_with_sam`, a wrapper to access the
+* Add :py:func:`~pvlib.ivtools.fit_cec_sam`, a wrapper to access the
   model fitting function '6parsolve' from NREL's System Advisor Model.
 
 
