--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -9,6 +9,11 @@ recommend all users of v0.6.3 upgrade to this release.
 **Python 2.7 support ended on June 1, 2019**. (:issue:`501`)
 
 
+Testing
+~~~~~~~
+* Added 30 minutes to timestamps in `test_psm3.csv` to match change in NSRDB (:issue:`733`)
+
+
 Contributors
 ~~~~~~~~~~~~
 * Mark Campanellli (:ghuser:`markcampanelli`)
