--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -15,6 +15,11 @@ Bug fixes
 * Fix handling of keyword arguments in `forecasts.get_processed_data`.
   (:issue:`745`)
 
+Testing
+~~~~~~~
+* Added 30 minutes to timestamps in `test_psm3.csv` to match change in NSRDB (:issue:`733`)
+
+
 Contributors
 ~~~~~~~~~~~~
 * Mark Campanellli (:ghuser:`markcampanelli`)
