--- a/docs/sphinx/source/whatsnew/v0.7.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.7.0.rst
@@ -7,7 +7,7 @@ This is a major release that drops support for Python 2 and Python 3.4. We
 recommend all users of v0.6.3 upgrade to this release after checking API
 compatibility notes.
 
-**Python 2.7 support ended on June 1, 2019**. (:issue:`501`)
+**Python 2.7 support ended on June 1, 2019.** (:issue:`501`)
 **Minimum numpy version is now 1.10.4. Minimum pandas version is now 0.18.1.**
 
 Bug fixes
@@ -18,10 +18,11 @@ Bug fixes
 Testing
 ~~~~~~~
 * Added 30 minutes to timestamps in `test_psm3.csv` to match change in NSRDB (:issue:`733`)
-
+* Added tests for methods in bifacial.py.
 
 Contributors
 ~~~~~~~~~~~~
 * Mark Campanellli (:ghuser:`markcampanelli`)
 * Will Holmgren (:ghuser:`wholmgren`)
 * Oscar Dowson (:ghuser:`odow`)
+* Alexander Morgan (:ghuser:`alexandermorgan`)
